<resources>
    <string name="app_name">Calculator</string>
    <string name="_1234">1234</string>
    <string name="_1111_123">1111+123</string>
    <string name="c">C</string>
    <string name="bar">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiplication">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="subtraction">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="addition">+</string>
    <string name="equals">=</string>
    <string name="point">.</string>
    <string name="_0">0</string>
    <string name="backspace">⇽</string>
    <string name="percent">%</string>
    <string name="plusMinus">⁺/-</string>
</resources>